[package]
authors = ["Arvid Norlander"]
categories = ["config"]
description = "Library to merge ini files subject to configuration."
edition = "2021"
exclude = ["/.github/", "/.chglog/"]
keywords = ["ini", "config", "configuration", "merge"]
license = "LGPL-3.0-only"
name = "ini-merge"
repository = "https://github.com/VorpalBlade/ini-merge"
rust-version = "1.75.0"
version = "0.5.0"

[dependencies]
ini-roundtrip = "0.1.3"
itertools = { version = "0.13.0", default-features = false }
keyring = { version = "2.3.3", optional = true, default-features = false, features = [
    "linux-secret-service",
    "platform-freebsd",
    "platform-windows",
    "platform-macos",
] }
lending-iterator = { version = "0.1.7", default-features = false }
log = { version = "0.4.21", default-features = false }
ouroboros = { version = "0.18.3", default-features = false }
regex = "1.10.4"
thiserror = { version = "1.0.61", default-features = false }

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = { version = "1.4.0", default-features = false, features = [
    "std",
] }

[lints.rust]
rust-2018-idioms = "warn"
unreachable_pub = "warn"

[lints.clippy]
doc_markdown = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"
