[package]
authors = ["Arvid Norlander"]
categories = ["config"]
description = "Library to merge ini files subject to configuration."
edition = "2021"
exclude = ["/.github/", "/.chglog/"]
keywords = ["ini", "config", "configuration", "merge"]
license = "LGPL-3.0-only"
name = "ini-merge"
repository = "https://github.com/VorpalBlade/ini-merge"
rust-version = "1.75.0"
version = "0.5.1"

[features]
# Default features
default = ["keyring", "vendored"]

# Keyring support for password lookup
keyring = ["dep:keyring"]

# Should native dependencies be vendored and statically linked?
vendored = ["keyring?/vendored"]

[dependencies]
ini-roundtrip = "0.1.3"
itertools = { version = "0.13.0", default-features = false }
keyring = { version = "3.0.5", optional = true, default-features = false, features = [
    "apple-native",
    "crypto-rust",
    "sync-secret-service",
    "windows-native",
] }
lending-iterator = { version = "0.1.7", default-features = false }
log = { version = "0.4.22", default-features = false }
ouroboros = { version = "0.18.4", default-features = false }
regex = "1.10.6"
thiserror = { version = "1.0.63", default-features = false }

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = { version = "1.4.0", default-features = false, features = [
    "std",
] }

[lints.rust]
rust-2018-idioms = "warn"
unreachable_pub = "warn"

[lints.clippy]
doc_markdown = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"
