[package]
authors = ["Arvid Norlander"]
categories = ["config"]
description = "Library to merge ini files subject to configuration."
edition = "2021"
exclude = ["/.chglog/", "/.github/"]
keywords = ["config", "configuration", "ini", "merge"]
license = "LGPL-3.0-only"
name = "ini-merge"
repository = "https://github.com/VorpalBlade/ini-merge"
rust-version = "1.81.0"
version = "0.6.2"

[features]
# Default features
default = ["keyring", "vendored"]

# Keyring support for password lookup
keyring = ["dep:keyring"]

# Should native dependencies be vendored and statically linked?
vendored = ["keyring?/vendored"]

[dependencies]
ini-roundtrip = "0.2.0"
itertools = { version = "0.14.0", default-features = false }
keyring = { version = "3.6.2", optional = true, default-features = false, features = [
    "apple-native",
    "crypto-rust",
    "sync-secret-service",
    "windows-native",
] }
lending-iterator = { version = "0.1.7", default-features = false }
log = { version = "0.4.27", default-features = false }
ouroboros = { version = "0.18.5", default-features = false }
regex = "1.11.1"
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
indoc = "2.0.6"
pretty_assertions = { version = "1.4.1", default-features = false, features = [
    "std",
] }

[lints.rust]
elided_lifetimes_in_paths = "warn"
keyword_idents = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[lints.clippy]
assigning_clones = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
equatable_if_let = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
format_push_string = "warn"
ignored_unit_patterns = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_pass_by_value = "warn"
or_fun_call = "warn"
ptr_as_ptr = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_safety_doc = "warn"
unnested_or_patterns = "warn"
unwrap_used = "warn"
use_self = "warn"
wildcard_imports = "warn"
